--- a/templates/home.html
+++ b/templates/home.html
@@ -28,8 +28,8 @@
     <div id = "name"><img src="{{ url_for('static', filename='img/CHT_NAME.png') }}"></div>
 
     <div id = "search">
-        <form action="/posting">
-            <input type="text" name="keyword" placeholder="s  e  a  r  c  h"> <!--hidden-->
+        <form>
+            <input type="text" name="subject" placeholder="s  e  a  r  c  h"> <!--hidden-->
             <button><img src="{{ url_for('static', filename='img/search.svg') }}"></button>
         </form>
     </div>
