--- a/static/css/posting.css
+++ b/static/css/posting.css
@@ -9,16 +9,20 @@
 }
 
 
-body{
-    background:linear-gradient(to top,#fff,#8155EA);
+body {
+    background: linear-gradient(to top, #fff, #8155EA);
     min-height: 100vh;
+    display: flex;
+    flex-direction: column; /* body를 column 방향으로 정렬 */
 }
 
 #wrap {
-    min-height: 100%;
-    position: relative;
+    flex: 1; /* 남은 공간을 모두 차지하도록 */
     padding-bottom: 180px;
+    position: relative;
 }
+
+
 
 header{
     align-items: center;
@@ -74,6 +78,11 @@ main{
                 font-size: large;
                 list-style: none;
                 margin-left: 10px;
+                transition: 0.5s;
+            }
+            > li:hover{
+                color: rgb(0, 0, 0);
+                font-weight: bold;
             }
         }
         >span{
@@ -81,6 +90,7 @@ main{
             font-weight: 500;
             font-size: large;
             >span{
+                font-weight: bold;
                 color: black;
             }
         }
@@ -142,6 +152,13 @@ main{
                 border-color: #8155EA;
                 border-width: 0 0 5px 0;
                 background-color: #fff;
+                font-size: 16;
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                > span:nth-child(2){
+                    width: 65%;
+                }
             }
             >li:first-child{
                 border-style: solid;
