Feat: Merge branch

--- a/templates/writing.html
+++ b/templates/writing.html
@@ -44,7 +44,7 @@
                 <strong class="content">
                     <label for="contents">Content</label>
                 </strong>
-                <textarea id="editableContent" name="Content" required></textarea>
+                <textarea id="editableContent" name="Content"></textarea>
             </div>
             <div class="button_area">
                 <input type="submit" name="Back" value="Back" onclick="alert('back to list')">
